# browsr

./: Cargo.toml  README.md
src/: cli.rs  main.rs  parsing.rs  runtime.rs  ui.rs
src/mode/: detail.rs  input.rs  menu.rs  mod.rs
