[package]
name = "browsr"
version = "0.1.1-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.2.0"
crossterm = "0.26.1"
getopts = "0.2.21"
ncbi = "0.2.0-beta"
serde = "1.0.171"
serde_json = "1.0.102"
tui = "0.19.0"
tui-tree-widget = "0.12.0"
