[package]
name = "browsr"
version = "0.1.3-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
crossterm = "0.25.0"
getopts = "0.2.21"
ncbi = "0.2.0-beta"
serde = "1.0.171"
serde_json = "1.0.102"
tui = "0.19.0"
tui-tree-widget = "0.12.0"
tui-input = "0.6.1"
